commit course 04 ( julia)

--- a/course03/nbs/02.hpc_cuda.ipynb
+++ b/course03/nbs/02.hpc_cuda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "d82aef84-265f-41f2-9fb8-32ca51d21a66",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "828208f5-84a8-4418-9cbb-455745a4950b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numba import cuda\n"
+    "from numba import cuda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d7637b50-8be1-4540-8bf3-a20096fc396d",
    "metadata": {},
    "outputs": [
@@ -48,29 +48,28 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cuda.detect()\n"
+    "cuda.detect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "092a0f6c-891d-43a4-80a6-08681a36e19d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Launching a Cuda kernel from Numba is very easy. A kernel is defined by using the @cuda.jit decorator as\n",
-    "\n",
     "@cuda.jit\n",
     "def an_empty_kernel():\n",
     "    \"\"\"A kernel that doesn't do anything.\"\"\"\n",
     "    # Get my current position in the global grid\n",
-    "    [pos_x, pos_y] = cuda.grid(2)\n"
+    "    [pos_x, pos_y] = cuda.grid(2)"
    ]
   },
   {
@@ -78,13 +77,12 @@
    "id": "6e1b874a-b625-49e8-b42a-d66fb108dee7",
    "metadata": {},
    "source": [
-    "In order to launch the kernel we need to specify the thread layout. The following commands define a two dimensional thread layout of  threads per block and  blocks. In total this gives us  threads. This sounds huge. But GPUs are designed to launch large amounts of threads. The only restriction is that we are allowed to have at most 1024 threads in total (product of all dimensions) within a single thread block.\n",
-    "\n"
+    "The following commands define a two dimensional thread layout of  threads per block and 16x16  blocks. In total this gives us 256x256 threads.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a499ab01-0bd9-45a8-af9f-dbfb0d539719",
    "metadata": {},
    "outputs": [],
@@ -94,8 +92,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5855004-e4fa-4668-bcbd-283a253c3a73",
+   "metadata": {},
+   "source": [
+    "We can now launch all 16.8 million threads by calling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6c43eaa5-ecc8-4b65-862e-9b92ce99fc96",
    "metadata": {},
    "outputs": [],
@@ -104,13 +110,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "492b942a-480d-4f78-9f34-afa2a01224a1",
+   "cell_type": "markdown",
+   "id": "15a26ed5-6efb-4763-941b-c4e685ac8045",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Memory management\n"
+    "### Memory management\n"
    ]
   },
   {
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "9fd87a68-ac66-403e-8b1d-4c8c1319ce54",
    "metadata": {},
    "outputs": [
@@ -148,19 +152,19 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "host_array = np.empty(shape=device_arr.shape, dtype=device_arr.dtype)\n",
-    "device_arr.copy_to_host(host_array)\n"
+    "device_arr.copy_to_host(host_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f9b9246b-4086-4577-8b5b-c06ef6d845c6",
    "metadata": {},
    "outputs": [],
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2a2f440b-0970-463a-b0ec-2db6d90a1829",
    "metadata": {},
    "outputs": [
@@ -191,6 +195,14 @@
       " [38 39 40 41]\n",
       " [52 53 54 55]]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/bi/phuongdv/miniconda3/envs/gpu/lib/python3.9/site-packages/numba/cuda/dispatcher.py:488: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
     }
    ],
    "source": [
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "83de8f76-a229-4cb5-83b1-e1dc1c4412b3",
    "metadata": {},
    "outputs": [
@@ -214,17 +226,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "872 ns ± 3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "894 ns ± 11.5 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit np.add(b_col, c)   # NumPy on CPU\n"
+    "%timeit np.add(b_col, c)   # NumPy on CPU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "971d984b-b798-4ad6-9aaf-507ced6f15fb",
    "metadata": {},
    "outputs": [
@@ -232,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "704 µs ± 446 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "713 µs ± 2.02 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -282,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.01092001])"
+       "array([0.01306025])"
       ]
      },
      "execution_count": 14,
@@ -310,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31.3 ms ± 61.3 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "32.8 ms ± 56.5 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -330,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.76 ms ± 39.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.79 ms ± 44.2 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
