--- a/course03/nbs/01.hpc_numba.ipynb
+++ b/course03/nbs/01.hpc_numba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "53eff0c2-7fce-4c2f-a89a-263745b3ac5c",
    "metadata": {},
    "outputs": [],
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bf1cc46d-c1cb-40d7-8b2b-ca9508c4a95a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "21f117a8-8ec6-4daf-b56d-ce2d9f94570c",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "array([ 3.5,  4. , 18.1])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1fff60cf-252c-493d-ba48-beb9b7555150",
    "metadata": {},
    "outputs": [],
@@ -75,18 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "698b89ea-0729-4ad5-9cdd-1b342111d798",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.10264913, 0.64676784, 0.95435959, 1.38760421, 1.02932213,\n",
-       "       0.27287204, 0.58558984, 0.60767219, 0.86988285, 1.38003422])"
+       "array([1.25150132, 1.60714314, 1.52126737, 0.95176305, 1.10607228,\n",
+       "       0.8833552 , 0.7702175 , 1.37556612, 0.30683007, 1.7370146 ])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,9 @@
    "id": "7196fe0b-823e-4509-a84e-487a5655c73b",
    "metadata": {},
    "source": [
-    "SIMD Acceleration\n",
+    "### SIMD Acceleration\n",
+    "\n",
+    "Single Instruction, Multiple Data\n",
     "\n",
     "![image.png](attachment:89fc9d13-f8a4-4c28-aaa7-17195467b765.png)\n",
     "\n",
@@ -116,21 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "d6f74d80-c55b-4c23-a485-7b24d31afd80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.01439152,  0.58357497, -0.42044916, -0.26511935,  0.32887154],\n",
-       "       [-1.30427579, -0.12730775,  0.87646604,  1.66067187, -2.01926156],\n",
-       "       [ 0.27997548,  2.72062244, -1.0513538 ,  3.40235338,  0.58234352],\n",
-       "       [ 0.20563999, -0.11043275,  0.14597557,  0.44503048,  0.49963767],\n",
-       "       [-0.16035167, -0.63036496, -1.54955845,  0.22915652,  0.281484  ]])"
+       "array([[ 2.17710469, -4.82889463,  0.14194597,  1.28518961, -4.0505944 ],\n",
+       "       [ 1.73547048, -1.74384121, -0.10770982, -0.54532996, -3.29900012],\n",
+       "       [-0.46748862,  1.76189617,  0.37442042,  1.14361095, -1.471786  ],\n",
+       "       [-0.85057775,  3.82977657,  1.26916579, -0.18767558,  0.61421996],\n",
+       "       [ 2.89627391, -1.69009978, -1.46365892, -0.25939345, -1.33258563]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d0294f2c-e15d-4fe7-982b-001d9673a0d4",
    "metadata": {},
    "outputs": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c7cfafc7-c4c0-4b93-b75c-fd2fa651e9a9",
    "metadata": {},
    "outputs": [
@@ -186,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "241 ms ± 542 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "211 ms ± 3.44 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "0a778464-3a36-4a31-948f-3662f71fc94d",
    "metadata": {},
    "outputs": [
@@ -204,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "895 µs ± 947 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "935 µs ± 2.1 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "8e8ef161-8640-4b87-becc-6ebc8904126e",
    "metadata": {},
    "outputs": [],
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "ea264d07-4fbe-4450-9da8-ccde9b8d403b",
    "metadata": {},
    "outputs": [],
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "75959311-130c-4fd8-8ed6-60afb6b137f7",
    "metadata": {},
    "outputs": [],
@@ -270,7 +272,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
+   "id": "ea7756b6-ffee-4be7-b8d5-b2e131cac750",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.15 s, sys: 0 ns, total: 2.15 s\n",
+      "Wall time: 2.15 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0002483659768713"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time std(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e71c4129-a778-4a98-a1ad-d4442a6bccdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 284 ms, sys: 3.89 ms, total: 288 ms\n",
+      "Wall time: 305 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0002483659768713"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time c_std(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "533f7f02-5884-4ee4-810c-13bd9dd67fe3",
    "metadata": {},
    "outputs": [
@@ -278,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.17 s ± 30.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.1 s ± 9.25 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -288,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "9faa4d6d-bb88-48c1-ae19-25bb88dc8385",
    "metadata": {},
    "outputs": [
@@ -296,7 +356,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.7 ms ± 11.3 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "21.8 ms ± 152 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -306,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "a02e510c-4381-4515-80f1-b16bdfa63eba",
    "metadata": {},
    "outputs": [],
@@ -325,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "fb018da8-1df7-4c86-aff2-67a64c7f02a4",
    "metadata": {},
    "outputs": [
@@ -333,10 +393,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.8\n",
-      "3.2\n",
-      "3.12\n",
-      "3.1413756\n"
+      "3.6\n",
+      "3.24\n",
+      "3.1304\n",
+      "3.1425204\n"
      ]
     }
    ],
@@ -348,33 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "dce40724-0212-4cd8-9f62-c3588e0eca17",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "npoints 10 delta: 0.31622776601683794\n",
-      "npoints 100 delta: 0.1\n",
-      "npoints 10000 delta: 0.01\n",
-      "npoints 10000000 delta: 0.00031622776601683794\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "# defining the uncertainty function \n",
-    "# with a lambda construct\n",
-    "uncertainty = lambda x: 1/math.sqrt(x)\n",
-    "for number in npoints:\n",
-    "  print('npoints', number, 'delta:', uncertainty(number))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "b4d1e190-678e-4d41-b54a-bdb485d4b809",
    "metadata": {},
    "outputs": [
@@ -382,17 +416,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.67 s ± 22.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "262 ms ± 5.84 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit pi(10000000)"
+    "%timeit pi(1000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "9aa04bc3-2357-4639-bcec-f708e892893c",
    "metadata": {},
    "outputs": [],
@@ -410,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "69e7416b-ad6b-4961-a87a-3b4307f45ef2",
    "metadata": {},
    "outputs": [
@@ -418,17 +452,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.15 s ± 4.44 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "8.02 ms ± 6.28 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit fast_pi( int(1e9) )"
+    "%timeit fast_pi( int(1000000) )\n",
+    "# %timeit fast_pi( int(1e9) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "dddd4a7a-b9af-484a-a38c-bb7cc6021493",
    "metadata": {},
    "outputs": [
@@ -436,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "683 ms ± 194 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "497 ms ± 75.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -475,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "8aa47a50-e20a-4650-a4ee-1f6c7f28218a",
    "metadata": {},
    "outputs": [],
@@ -503,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "941ebb51-5614-4a06-95a4-9928ed52dad8",
    "metadata": {},
    "outputs": [
@@ -511,7 +546,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.06 ms ± 82.7 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "927 µs ± 2.14 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -530,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "51129904-8084-4371-a2cd-3a5218344f36",
    "metadata": {},
    "outputs": [],
@@ -548,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "16c92810-aaaf-413c-bc45-64663854ab63",
    "metadata": {},
    "outputs": [
@@ -559,7 +594,7 @@
        "       1.        ], dtype=float32)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "id": "a668b56d-d4ba-4c2a-a0fd-c85e27f2e7b0",
    "metadata": {},
    "outputs": [
@@ -583,7 +618,7 @@
        "       1.        ])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "id": "012f3279-112e-4c13-b886-2b30259d5e7c",
    "metadata": {},
    "outputs": [
@@ -607,7 +642,7 @@
        " (array(float64, 1d, C), array(float64, 1d, C))]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "id": "af634c8f-6f22-40c2-a315-9a29fc9320bc",
    "metadata": {},
    "outputs": [],
@@ -646,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "e66a60ab-d830-49d4-b83d-abc050edb946",
    "metadata": {},
    "outputs": [
@@ -679,21 +714,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca875975-e2e9-4aee-9924-066b8033025d",
+   "metadata": {},
+   "source": [
+    "In x86_64 assembly, SSE uses subps for “subtraction packed single precision” (AVX uses vsubps), representing vector float32 operations. The subpd instruction (AVX = vsubpd) stands for “subtraction packed double precision”, representing float64 operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09d797ef-3340-44c8-b8f4-ddf9f5578897",
+   "metadata": {},
+   "source": [
+    "### autovectorizer demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "db3a3ae2-8d28-49b4-a83a-4d7c8bb74fab",
    "metadata": {},
    "source": [
-    "The autovectorizer can also optimize reduction loops, but only with permission. Normally, compilers are very careful not to reorder floating point instructions because floating point arithmetic is approximate, so mathematically allowed transformations do not always give the same result. For example, it is not generally true for floating point numbers that:\n",
+    "```Note: The autovectorizer can also optimize reduction loops, but only with permission. Normally, compilers are very careful not to reorder floating point instructions because floating point arithmetic is approximate, so mathematically allowed transformations do not always give the same result. For example, it is not generally true for floating point numbers that:```\n",
     "\n",
     "(a + (b + c)) == ((a + b) + c)\n",
     "\n",
     "For many situations, the round-off error that causes the difference between the left and the right is not important, so changing the order of additions is acceptable for a performance increase.\n",
     "\n",
-    "To allow reordering of operations, we need to tell Numba to enable fastmath optimizations:\n"
+    "To allow reordering of operations, we need to tell Numba to enable fastmath optimizations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "id": "bac574c6-70b1-4882-ab55-05f304f5a54f",
    "metadata": {},
    "outputs": [],
@@ -718,7 +769,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
+   "id": "c59da780-4feb-4e35-9a62-fbefa62fbbde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.4 µs ± 11.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "5.1 µs ± 10 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit do_sum(x32)\n",
+    "%timeit do_sum_fast(x32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "de93bed0-d093-4ab5-8c83-6374bc8782c3",
    "metadata": {},
    "outputs": [
@@ -737,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "8990cda8-bf95-4a43-ba48-228145244a68",
    "metadata": {},
    "outputs": [
@@ -756,34 +827,6 @@
     "do_sum_fast(x32)\n",
     "find_instr(do_sum_fast, keyword='mulp')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "c59da780-4feb-4e35-9a62-fbefa62fbbde",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.4 µs ± 22 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "5.12 µs ± 9.95 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit do_sum(x32)\n",
-    "%timeit do_sum_fast(x32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "304fbc33-dce7-43ea-b624-1cac321c780e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
