--- a/course03/nbs/02.hpc_cuda.ipynb
+++ b/course03/nbs/02.hpc_cuda.ipynb
@@ -15,9 +15,25 @@
    "execution_count": 1,
    "id": "828208f5-84a8-4418-9cbb-455745a4950b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<weakproxy at 0x7f77442401d0 to Device at 0x7f77443ce130>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from numba import cuda"
+    "from numba import cuda\n",
+    "cuda.select_device(0)\n",
+    "# write function to display device name \n",
+    "def get_current_device():\n",
+    "    return cuda.get_current_device()    \n",
+    "get_current_device()"
    ]
   },
   {
@@ -361,9 +377,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpu",
+   "display_name": "devEnv",
    "language": "python",
-   "name": "gpu"
+   "name": "devenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -375,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
